# deep-hedging

./: .gitignore  LICENSE  ML-3.ipynb  README.md  config.example.json  config.json  main.py  main2.py  pyproject.toml  run_analysis.ipynb  run_night_daily_seed42.sh
figures/: main.prof
notebooks/: grid_analysis.ipynb  plot.ipynb  runs_dashboard.ipynb
outputs/: grid_manifest_1777056240.json  grid_manifest_1777064211.json  grid_summary_1777102188.csv  runs_index.csv
outputs/20260412_000451_main_full_GBM_DeepDPG_BsDelta_57c8e9/: config.json  meta.json
outputs/20260412_000709_main_full_GBM_DeepDPG_BsDelta_224394/: meta.json
outputs/20260412_001356_main_full_GBM_DeepDPG_BsDelta_752507/: meta.json
outputs/20260412_004041_main_full_GBM_CVaRDPG_BsDelta_82d3c6/: meta.json
outputs/20260412_004252_main_full_GBM_CVaRDPG_BsDelta_8b5344/: meta.json
outputs/20260412_004925_main_full_GBM_CVaRDPG_BsDelta_e6a095/: meta.json
outputs/20260412_011522_main_full_SABR_DeepDPG_BartlettDelta_d2ddb8/: meta.json
outputs/20260412_011738_main_full_SABR_DeepDPG_BartlettDelta_ca7045/: config.json  meta.json
outputs/20260412_012414_main_full_SABR_DeepDPG_BartlettDelta_884806/: meta.json
outputs/20260412_015101_main_full_SABR_CVaRDPG_BartlettDelta_dc1fca/: meta.json
projet v6/: config.example.json  main.py
scripts/: grid_aggregate.py  grid_example.json  grid_search.py  rebal_grid.json  rebal_grid_2.json
src/: hedging_result.py  orchestrator.py
tests/: test_hedging_env_reward.py
v8/: PATCH_NOTES.md  config.example.json  config.json  main.py
v9/: requirements.txt
(+1205 files in other folders)
