[project]
name = "deep-hedging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "better-tables>=1.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-stubs==3.0.0.260204",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "scipy-stubs==1.17.1.3",
    "torch>=2.11.0",
]
